# ircamera-for-android

./: README.md  settings.gradle.kts
app/: README.md  build.gradle.kts
app/src/androidTest/java/com/example/ircamera/: ExampleInstrumentedTest.java
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ircamera.cpp  ircamera.h  mlx90640.cpp  mlx90640.h  serialport.hpp
app/src/main/java/com/example/ircamera/: IRCamera.java  IRView.java  MainActivity.java  NetworkStateReceiver.java  SerialPort.java  UsbReceiver.java
app/src/main/res/drawable/: border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  demens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/ircamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
usbSerialForAndroid/: build.gradle
usbSerialForAndroid/src/main/java/com/hoho/android/usbserial/driver/: ProlificSerialDriver.java
